--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,108 @@
 <!doctype html>
-
-
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	<title>Bootstrap 101 Template</title>
 
-    <!-- Bootstrap -->
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/Bootstrap.min.css') }}">
+	<!-- Bootstrap -->
+	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/Bootstrap.min.css') }}">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+	  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+</head>
+<body>
+	<script type=text/javascript src="{{ url_for('static', filename='js/jq.js') }}"></script>
+	<div class="jumbotron text-center">
+	  <h1>Penuts DnD City Generator 0.1</h1>
+	</div>
+	<div id="selections" class="container">
+		<div class="well">
+			<div class="checkbox">
+			  <label><input type="checkbox" value="">Option 1</label>
+			</div>
+			<div class="checkbox">
+			  <label><input type="checkbox" value="">Option 2</label>
+			</div>
+			<div class="checkbox disabled">
+			  <label><input type="checkbox" value="">Option 3</label>
+			</div>
 
-{% if name %}
-  <h1>Hello {{ name }}!</h1>
-{% else %}
-  <h1>Hello, World!</h1>
-{% endif %}
-{% for item in charList %}
-	<p>{{item}}</p>
-{% else %}
-	<p>this</p>
-{% endfor %}
+			<script type=text/javascript>
+			  $(function() {
+			    $('a#calculate').bind('click', function() {
+			      $.getJSON('/_add_numbers', {
+			        a: $('input[name="a"]').val(),
+			        b: $('input[name="b"]').val()
+			      }, function(data) {
+			        $("#result").text(data.result);
+			      });
+			      return false;
+			    });
+			  });
+			</script>
+			<h1>jQuery Example</h1>
+			<p><input type=text size=5 name=a> +
+			   <input type=text size=5 name=b> =
+			   <span id=result>?</span>
+			<p><a href=# id=calculate>calculate server side</a>
+
+		</div>
+	</div>
+	<div id="tables" class="container">	
+		<div class="col-md-7">
+			<h1>NPCs</h1>
+			<table class="table table-striped table-condensed table-hover">
+				<thead>
+				 	<tr>
+			            <th>First Name</th>
+			            <th>Last Name</th>
+			            <th>Race</th>
+			            <th>Gender</th>
+			            <th>Age</th>
+			    	</tr>
+			    </thead>
+			    <tbody>
+				{% for item in charList %}
+					<tr>
+						<td>{{item['firstName']}}</td>
+			            <td>{{item['lastName']}}</td>
+			            <td>{{item['race']}}</td>
+			            <td>{{item['gender']}}</td>
+			            <td>{{item['age']}}</td>
+					</tr>				
+				{% endfor %}
+				</tbody>
+			</table>	
+		</div>
+
+		<div class="col-md-5">
+			<h1>Buildings</h1>
+			<table class="table table-striped table-condensed table-hover">
+				<thead>
+				 	<tr>
+			            <th>type</th>
+			            <th>name</th>
+			    	</tr>
+			    </thead>
+			    <tbody>
+				{% for item in buildingList %}
+					<tr>
+						<td>{{item['type']}}</td>
+			            <td>{{item['name']}}</td>   
+					</tr>				
+				{% endfor %}
+				</tbody>
+			</table>	
+		</div>
+
+	</div>
+
+
+</body>
+  	
