--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 <body>
 	<script type=text/javascript src="{{ url_for('static', filename='js/jq.js') }}"></script>
 	<div class="jumbotron text-center">
-	  <h1>Penuts DnD City Generator 0.1</h1>
+	  <h1>Penuts DnD City Gen'er 0.1</h1>
 	</div>
 	<div id="selections" class="container">
 		<div class="well">
@@ -36,26 +36,23 @@
 			<script type=text/javascript>
 			  $(function() {
 			    $('a#calculate').bind('click', function() {
-			      $.getJSON('/_add_numbers', {
+			      $.getJSON('/redo', {
 			        a: $('input[name="a"]').val(),
-			        b: $('input[name="b"]').val()
 			      }, function(data) {
-			        $("#result").text(data.result);
+			      	$("#NpcTable").empty();
+			        $("#NpcTable").append(data);
 			      });
 			      return false;
 			    });
 			  });
 			</script>
-			<h1>jQuery Example</h1>
-			<p><input type=text size=5 name=a> +
-			   <input type=text size=5 name=b> =
-			   <span id=result>?</span>
-			<p><a href=# id=calculate>calculate server side</a>
+			<h1>NPC's To Gen'</h1>
+			<span><input type=text size=5 name=a value="10"><a href=# id=calculate>Go!</a></span>
 
 		</div>
 	</div>
 	<div id="tables" class="container">	
-		<div class="col-md-7">
+		<div id="NpcTable" class="col-md-7">
 			<h1>NPCs</h1>
 			<table class="table table-striped table-condensed table-hover">
 				<thead>
