--- a/templates/buildingstable.html
+++ b/templates/buildingstable.html
@@ -1,4 +1,4 @@
-<h1>Buildings</h1>
+<div class="panel-heading"> <h3>Buildings</h3></div>
 	<table class="table table-striped table-condensed table-hover">
 		<thead>
 		 	<tr>
@@ -14,4 +14,4 @@
 			</tr>				
 		{% endfor %}
 		</tbody>
-	</table>	
+	</table>
