--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,14 @@
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<title>Penuts City Gen</title>
 	<!-- Bootstrap -->
-	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/main.css') }}">
-		<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/bootstrap.min.css') }}">
-	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/bootstrap-toggle.css') }}">
 
+	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/bootstrap.min.css') }}">
+	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/bootstrap-toggle.css') }}">
+	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/main.css') }}">
 
 	<script type=text/javascript src="{{ url_for('static', filename='js/jq.js') }}"></script>
 	<script type=text/javascript src="{{ url_for('static', filename='js/bootstrap-toggle.js') }}"></script>
+	<script type=text/javascript src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 	<script type=text/javascript src="{{ url_for('static', filename='js/main.js') }}"></script>
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,23 +23,52 @@
 	<![endif]-->
 </head>
 <body>	
-	<div class="jumbotron text-center">
-	  <h1>Reroll That City!</h1>
-	  <h3> alpha v0.2 </h3>
+	<div id="mainHeader" class="container text-center">
+	  <h1>Reroll That City! <small id="versionNum">v0.3</small></h1>
 	</div>
 
-		<div id="sidebar" class="col-md-2 col-lg-2 col-xl-1 well">
-			<div id="buildingsToGen">
-				<div id="saveLoadRest">
-					<button type="button" id="saveBtn" class="btn btn-primary btn">Save</button>	
-					<button type="button" id="loadBtn" class="btn btn-primary btn">Load</button>	
-					<button type="button" id="resetBtn" class="btn btn-primary btn">Reset</button>	
+		<div id="topSegment" class="well well-sm col-md-12">
+			<div id="weather" class="col-sm-4 text-center">
+				<h4> Todays Weather: Windy!</h4>				
+			</div>
+			<div id="population" class="col-sm-4 text-center">
+				<h4> Population: 150 </h4>
+			</div>
+			<div id="threatLevel" class="col-sm-4 text-center">
+				<h4> Threat Level: High Alert <h4>
+			</div>
+		</div>
+
+		<div id="sidebar" class="well well-sm">
+			
+			<div id="saveLoadRest">
+				<button type="button" id="saveBtn" class="btn btn-primary btn sidebar-3">Save</button>	
+				<button type="button" id="loadBtn" class="btn btn-primary btn sidebar-3">Load</button>	
+				<button type="button" id="resetBtn" class="btn btn-primary btn sidebar-3">Reset</button>	
+			</div>
+
+			<div id="cityToGen">
+				<h3>City</h3>
+				<div class="dropdown" id="citySize" >
+				  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">City Size
+				  <span class="caret"></span></button>
+				  <ul class="dropdown-menu">
+				    <li><a href="#">Hamlet</a></li>
+				    <li><a href="#">Village</a></li>
+				    <li><a href="#">Town</a></li>
+				    <li><a href="#">City</a></li>
+				  </ul>
 				</div>
+				<div id="citySizeText">	
+				Village
+				</div>
+			</div>
+			<div id="buildingsToGen">
 				<form>
 					<h3> Buildings </h3>
 					<div>
-						<input type="checkbox" data-width=90 data-size="small" checked data-toggle="toggle" name="inn" data-on="Inn" data-off="Inn">
-						<input type="checkbox" data-width=80 data-size="small" checked data-toggle="toggle" name="alchemist" data-on="Alchemist" data-off="Alchemist">
+						<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="inn" data-on="Inn" data-off="Inn">
+						<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="alchemist" data-on="Alchemist" data-off="Alchemist">
 						<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="blacksmith" data-on="Blacksmith" data-off="Blacksmith">
 						<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="jeweler" data-on="Jeweler" data-off="Jeweler">
 						<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="magicweps" data-on="Magic weps" data-off="Magic weps">
@@ -48,62 +78,86 @@
 					</div>					
 				</form>
 			</div>
-			<div id="npcSelection">
+			<div id="npcsToGen">
 				<h3>NPC's</h3>
 				<form>	
-					<input type=text size=5 name=a value="10">
-					<button type="button"  id="regenerateAll" class="btn btn-primary btn-lg">Reroll that City!</button>	
+					<div id="npcQuantInput">					
+						<h4>NPCs to Gen: </h4>
+						<input type=text size=5 id="rerollBtn" name=npcGenQuant value="10">
+					</div>
+
+
+					<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="tiefling" data-on="Tiefling" data-off="Tiefling">
+					<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="human" data-on="Human" data-off="Human">
+					<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="halfOrc" data-on="HalfOrc" data-off="HalfOrc">
+					<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="halfling" data-on="Halfling" data-off="Halfling">
+					<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="halfelf" data-on="HalfElf" data-off="HalfElf">
+					<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="gnome" data-on="Gnome" data-off="Gnome">
+					<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="elf" data-on="Elf" data-off="Elf">
+					<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="dwarf" data-on="Dwarf" data-off="Dwarf">
+					<input type="checkbox" data-width=100 data-size="small" checked data-toggle="toggle" name="dragonBorn" data-on="DragonBorn" data-off="DragonBorn">
+
+
+
 				</form>
+				<button type="button"  id="rerollAll" class="btn btn-primary btn-lg">Reroll that City!</button>	
+				
 			</div>			
-		</div>	
-
-
-
-		<div id="npcTable" class="col-md-6 col-lg-6">
-			<h1>NPCs</h1>
-			<table class="table table-striped table-condensed table-hover">
-				<thead>
-				 	<tr>
-			            <th>First Name</th>
-			            <th>Last Name</th>
-			            <th>Race</th>
-			            <th>Gender</th>
-			            <th>Age</th>
-			    	</tr>
-			    </thead>
-			    <tbody>
-				{% for item in charList %}
-					<tr>
-						<td>{{item['firstName']}}</td>
-			            <td>{{item['lastName']}}</td>
-			            <td>{{item['race']}}</td>
-			            <td>{{item['gender']}}</td>
-			            <td>{{item['age']}}</td>
-					</tr>				
-				{% endfor %}
-				</tbody>
-			</table>	
+		</div>			
+		<div class="col-md-8 col-lg-7">
+			<div id="npcTable" class="panel panel-primary">
+				<div class="panel-heading"> <h3> NPCs </h3></div>
+				<table class="table table-striped table-condensed table-hover">
+					<thead>
+					 	<tr>
+				            <th>First Name</th>
+				            <th>Last Name</th>
+				            <th>Race</th>
+				            <th>Gender</th>
+				            <th>Age</th>
+				            <th>Trait A</th>
+				            <th>Trait B</th>
+				            <th>Job</th>
+				    	</tr>
+				    </thead>
+				    <tbody>
+					{% for item in charList %}
+						<tr>
+							<td>{{item['firstName']}}</td>
+				            <td>{{item['lastName']}}</td>
+				            <td>{{item['race']}}</td>
+				            <td>{{item['gender']}}</td>
+				            <td>{{item['age']}}</td>
+				            <td>{{item['personality1']}}</td>
+				            <td>{{item['personality2']}}</td>
+				            <td>{{item['job']}}</td>
+						</tr>				
+					{% endfor %}
+					</tbody>
+				</table>
+			</div>			
 		</div>
 
-
-		<div id="buildingsTable" class="col-md-4 col-lg-4">
-			<h1>Buildings</h1>
-			<table class="table table-striped table-condensed table-hover">
-				<thead>
-				 	<tr>
-			            <th>type</th>
-			            <th>name</th>
-			    	</tr>
-			    </thead>
-			    <tbody>
-				{% for item in buildingList %}
-					<tr>
-						<td>{{item['type']}}</td>
-			            <td>{{item['name']}}</td>   
-					</tr>				
-				{% endfor %}
-				</tbody>
-			</table>	
+		<div class="col-md-5 col-lg-3">
+			<div id="buildingsTable" class="panel panel-primary">
+				<div class="panel-heading"> <h3>Buildings</h3></div>
+				<table class="table table-striped table-condensed table-hover">
+					<thead>
+					 	<tr>
+				            <th>type</th>
+				            <th>name</th>
+				    	</tr>
+				    </thead>
+				    <tbody>
+					{% for item in buildingList %}
+						<tr>
+							<td>{{item['type']}}</td>
+				            <td>{{item['name']}}</td>   
+						</tr>				
+					{% endfor %}
+					</tbody>
+				</table>
+			</div>
 		</div>
 
 
